# detect-pretrain-code

./: pyproject.toml
data/recent_wikimia/: recent_wikimia.jsonl
data/recent_wikimia/hf_dataset/: data-00000-of-00001.arrow  state.json
data/recent_wikimia_2024/: recent_wikimia.jsonl
data/recent_wikimia_2024/hf_dataset/: data-00000-of-00001.arrow  dataset_info.json  state.json
data/recent_wikimia_2025/: recent_wikimia.jsonl
data/recent_wikimia_2025/hf_dataset/: data-00000-of-00001.arrow  state.json
src/: dataset_2025.py  eval.py  options.py  run.py
